# prismorouter

./: CHANGELOG.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: tests.yml
prismo_router/: __init__.py  cache_safety.py  complexity_detector.py  config.py  elo.py  elo_rating.py  feature_extractor.py  features.py  heuristic.py  heuristic_scorer.py  hybrid_scorer.py  jailbreak_detector.py  latency.py  latency_tracker.py  model_normalizer.py  models.py  repository.py  router.py  routing_profile.py  routing_safety.py  routing_strategy.py  safety.py  values.py
tests/: test_router.py
